reference/k/snapshots/variables-multiple-field-bindings.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-multiple-field-bindings.cdz
---
# variables-multiple-field-bindings

## Input

```cadenza
let { a, b, c, d, e } = { a = 1, b = 2, c = 3, d = 4, e = 5 }
a + b + c + d + e
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 109 117 108 116 105 112 108 101 45 102 105 101 108 100 45 98 105 110 100 105 110 103 115 46 99 100 122) (Span (0 62) (Apply (Op 61) (Apply (Ident 108 101 116) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Ident 97) (Ident 98) (Ident 99) (Ident 100) (Ident 101))) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Apply (Op 61) (Ident 97) (Integer 1)) (Apply (Op 61) (Ident 98) (Integer 2)) (Apply (Op 61) (Ident 99) (Integer 3)) (Apply (Op 61) (Ident 100) (Integer 4)) (Apply (Op 61) (Ident 101) (Integer 5))))) (Span (62 79) (Apply (Op 43) (Apply (Op 43) (Apply (Op 43) (Apply (Op 43) (Ident 97) (Ident 98)) (Ident 99)) (Ident 100)) (Ident 101))))
```

## Expected

```
() : Unit
15 : Integer
```

## K Output

```
<generatedTop>
  <k>
    15 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "a" |-> 1
    "b" |-> 2
    "c" |-> 3
    "d" |-> 4
    "e" |-> 5 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-multiple-field-bindings.cdz"
  </file>
  <span-start>
    62
  </span-start>
  <span-end>
    79
  </span-end>
</generatedTop>
```

