reference/k/snapshots/variables-multiple-nesting-levels.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-multiple-nesting-levels.cdz
---
# variables-multiple-nesting-levels

## Input

```cadenza
let a = 1
let level1 =
    let b = 2
    let level2 =
        let c = 3
        a + b + c
    level2
level1
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 109 117 108 116 105 112 108 101 45 110 101 115 116 105 110 103 45 108 101 118 101 108 115 46 99 100 122) (Span (0 10) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 97)) (Integer 1))) (Span (10 101) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 108 101 118 101 108 49)) (Apply (Synthetic 95 95 98 108 111 99 107 95 95) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 98)) (Integer 2)) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 108 101 118 101 108 50)) (Apply (Synthetic 95 95 98 108 111 99 107 95 95) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 99)) (Integer 3)) (Apply (Op 43) (Apply (Op 43) (Ident 97) (Ident 98)) (Ident 99)))) (Ident 108 101 118 101 108 50)))) (Span (101 107) (Ident 108 101 118 101 108 49)))
```

## Expected

```
() : Unit
() : Unit
6 : Integer
```

## K Output

```
<generatedTop>
  <k>
    6 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "a" |-> 1
    "level1" |-> 6 )
    1 |-> scope ( 0 , "b" |-> 2
    "level2" |-> 6 )
    2 |-> scope ( 1 , "c" |-> 3 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    3
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-multiple-nesting-levels.cdz"
  </file>
  <span-start>
    101
  </span-start>
  <span-end>
    107
  </span-end>
</generatedTop>
```

