reference/k/snapshots/variables-multiple-reassignments.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-multiple-reassignments.cdz
---
# variables-multiple-reassignments

## Input

```cadenza
let x = 1
x = 2
x = 3
x = 4
x
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 109 117 108 116 105 112 108 101 45 114 101 97 115 115 105 103 110 109 101 110 116 115 46 99 100 122) (Span (0 10) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 1))) (Span (10 16) (Apply (Op 61) (Ident 120) (Integer 2))) (Span (16 22) (Apply (Op 61) (Ident 120) (Integer 3))) (Span (22 28) (Apply (Op 61) (Ident 120) (Integer 4))) (Span (28 29) (Ident 120)))
```

## Expected

```
() : Unit
() : Unit
() : Unit
() : Unit
4 : Integer
```

## K Output

```
<generatedTop>
  <k>
    4 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "x" |-> 4 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-multiple-reassignments.cdz"
  </file>
  <span-start>
    28
  </span-start>
  <span-end>
    29
  </span-end>
</generatedTop>
```

