reference/k/snapshots/variables-multiple-sequential-bindings.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-multiple-sequential-bindings.cdz
---
# variables-multiple-sequential-bindings

## Input

```cadenza
let x = 1
let y = 2
x + y
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 109 117 108 116 105 112 108 101 45 115 101 113 117 101 110 116 105 97 108 45 98 105 110 100 105 110 103 115 46 99 100 122) (Span (0 10) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 1))) (Span (10 20) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 121)) (Integer 2))) (Span (20 25) (Apply (Op 43) (Ident 120) (Ident 121))))
```

## Expected

```
() : Unit
() : Unit
3 : Integer
```

## K Output

```
<k>
  3 ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , "x" |-> 1
  "y" |-> 2 )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/variables-multiple-sequential-bindings.cdz"
</file>
<span-start>
  20
</span-start>
<span-end>
  25
</span-end>
```

