reference/k/snapshots/variables-multiple-wildcards.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-multiple-wildcards.cdz
---
# variables-multiple-wildcards

## Input

```cadenza
let (_, x, _) = (1, 2, 3)
x
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 109 117 108 116 105 112 108 101 45 119 105 108 100 99 97 114 100 115 46 99 100 122) (Span (0 26) (Apply (Op 61) (Apply (Ident 108 101 116) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Ident 95) (Ident 120) (Ident 95))) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Integer 1) (Integer 2) (Integer 3)))) (Span (26 27) (Ident 120)))
```

## Expected

```
() : Unit
2 : Integer
```

## K Output

```
<k>
  2 ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , "x" |-> 2 )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/variables-multiple-wildcards.cdz"
</file>
<span-start>
  26
</span-start>
<span-end>
  27
</span-end>
```

