reference/k/snapshots/variables-nested-tuple-pattern.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-nested-tuple-pattern.cdz
---
# variables-nested-tuple-pattern

## Input

```cadenza
let (a, (b, c)) = (1, (2, 3))
a + b + c
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 110 101 115 116 101 100 45 116 117 112 108 101 45 112 97 116 116 101 114 110 46 99 100 122) (Span (0 30) (Apply (Op 61) (Apply (Ident 108 101 116) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Ident 97) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Ident 98) (Ident 99)))) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Integer 1) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (Integer 2) (Integer 3))))) (Span (30 39) (Apply (Op 43) (Apply (Op 43) (Ident 97) (Ident 98)) (Ident 99))))
```

## Expected

```
() : Unit
6 : Integer
```

## K Output

```
<generatedTop>
  <k>
    6 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "a" |-> 1
    "b" |-> 2
    "c" |-> 3 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/variables-nested-tuple-pattern.cdz"
  </file>
  <span-start>
    30
  </span-start>
  <span-end>
    39
  </span-end>
</generatedTop>
```

