reference/k/snapshots/variables-partial-record-destructuring.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-partial-record-destructuring.cdz
---
# variables-partial-record-destructuring

## Input

```cadenza
let { x, ... } = { x = 10, y = 20, z = 30 }
x
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 112 97 114 116 105 97 108 45 114 101 99 111 114 100 45 100 101 115 116 114 117 99 116 117 114 105 110 103 46 99 100 122) (Span (0 44) (Apply (Ident 108 101 116) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Ident 120) (Apply (Op 61) (Apply (Op 46 46 46) (Error)) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Apply (Op 61) (Ident 120) (Integer 10)) (Apply (Op 61) (Ident 121) (Integer 20)) (Apply (Op 61) (Ident 122) (Integer 30))))))) (Span (44 45) (Ident 120)))
```

## Expected

```
() : Unit
10 : Integer
```

## K Output

```
<generatedTop>
  <k>
    10 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "x" |-> 10 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-partial-record-destructuring.cdz"
  </file>
  <span-start>
    44
  </span-start>
  <span-end>
    45
  </span-end>
</generatedTop>
```

