reference/k/snapshots/variables-partial-record-splitting.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-partial-record-splitting.cdz
---
# variables-partial-record-splitting

## Input

```cadenza
let { x, ...rest } = { x = 10, y = 20, z = 30 }
x
rest
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 112 97 114 116 105 97 108 45 114 101 99 111 114 100 45 115 112 108 105 116 116 105 110 103 46 99 100 122) (Span (0 48) (Apply (Op 61) (Apply (Ident 108 101 116) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Ident 120) (Apply (Op 46 46 46) (Ident 114 101 115 116)))) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Apply (Op 61) (Ident 120) (Integer 10)) (Apply (Op 61) (Ident 121) (Integer 20)) (Apply (Op 61) (Ident 122) (Integer 30))))) (Span (48 49) (Ident 120)) (Span (50 54) (Ident 114 101 115 116)))
```

## Expected

```
() : Unit
10 : Integer
{ y = 20, z = 30 } : { y = Integer, z = Integer }
```

## K Output

```
<k>
  record ( "y" |-> 20
  "z" |-> 30 ) ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , "rest" |-> record ( "y" |-> 20
  "z" |-> 30 )
  "x" |-> 10 )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/variables-partial-record-splitting.cdz"
</file>
<span-start>
  50
</span-start>
<span-end>
  54
</span-end>
```

