reference/k/snapshots/variables-reassignment-frees-old-value.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-reassignment-frees-old-value.cdz
---
# variables-reassignment-frees-old-value

## Input

```cadenza
let s = "hello"
s = "world"
s
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 114 101 97 115 115 105 103 110 109 101 110 116 45 102 114 101 101 115 45 111 108 100 45 118 97 108 117 101 46 99 100 122) (Span (0 16) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 115)) (String 104 101 108 108 111))) (Span (16 28) (Apply (Op 61) (Ident 115) (String 119 111 114 108 100))) (Span (28 29) (Ident 115)))
```

## Expected

```
() : Unit
() : Unit
"world" : String
```

## K Output

```
<generatedTop>
  <k>
    "world" ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "s" |-> "world" )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/variables-reassignment-frees-old-value.cdz"
  </file>
  <span-start>
    28
  </span-start>
  <span-end>
    29
  </span-end>
</generatedTop>
```

