reference/k/snapshots/variables-reassignment-in-nested-scope.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-reassignment-in-nested-scope.cdz
---
# variables-reassignment-in-nested-scope

## Input

```cadenza
let x = 1
let result =
    x = 2
    x
x
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 114 101 97 115 115 105 103 110 109 101 110 116 45 105 110 45 110 101 115 116 101 100 45 115 99 111 112 101 46 99 100 122) (Span (0 10) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 1))) (Span (10 39) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 114 101 115 117 108 116)) (Apply (Synthetic 95 95 98 108 111 99 107 95 95) (Apply (Op 61) (Ident 120) (Integer 2)) (Ident 120)))) (Span (39 40) (Ident 120)))
```

## Expected

```
() : Unit
2 : Integer
2 : Integer
```

## K Output

```
<generatedTop>
  <k>
    2 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "result" |-> 2
    "x" |-> 2 )
    1 |-> scope ( 0 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    2
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/variables-reassignment-in-nested-scope.cdz"
  </file>
  <span-start>
    39
  </span-start>
  <span-end>
    40
  </span-end>
</generatedTop>
```

