reference/k/snapshots/variables-reassignment-vs-shadowing.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-reassignment-vs-shadowing.cdz
---
# variables-reassignment-vs-shadowing

## Input

```cadenza
let x = 1
let outer =
    let x = 10
    x
let inner =
    x = 2
    x
outer
inner
x
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 114 101 97 115 115 105 103 110 109 101 110 116 45 118 115 45 115 104 97 100 111 119 105 110 103 46 99 100 122) (Span (0 10) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 1))) (Span (10 43) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 111 117 116 101 114)) (Apply (Synthetic 95 95 98 108 111 99 107 95 95) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 10)) (Ident 120)))) (Span (43 71) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 105 110 110 101 114)) (Apply (Synthetic 95 95 98 108 111 99 107 95 95) (Apply (Op 61) (Ident 120) (Integer 2)) (Ident 120)))) (Span (71 76) (Ident 111 117 116 101 114)) (Span (77 82) (Ident 105 110 110 101 114)) (Span (83 84) (Ident 120)))
```

## Expected

```
() : Unit
() : Unit
() : Unit
10 : Integer
2 : Integer
2 : Integer
```

## K Output

```
<generatedTop>
  <k>
    2 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "inner" |-> 2
    "outer" |-> 10
    "x" |-> 2 )
    1 |-> scope ( 0 , "x" |-> 10 )
    2 |-> scope ( 0 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    3
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-reassignment-vs-shadowing.cdz"
  </file>
  <span-start>
    83
  </span-start>
  <span-end>
    84
  </span-end>
</generatedTop>
```

